showProduct links added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p>Summer Collection New Modern Design</p>
         <div class="products-list">
             <div class="product">
-                <img src="./images/products/f1.jpg" alt="product" class="product-img">
+                <img src="./images/products/f1.jpg" alt="product" class="product-img" onclick="window.location.href='showProduct.html'">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f2.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f2.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f3.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f3.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f4.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f4.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f5.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f5.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f6.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f6.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f7.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f7.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/f8.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/f8.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -247,7 +247,7 @@
         <p>Summer Collection New Modern Design</p>
         <div class="products-list">
             <div class="product">
-                <img src="./images/products/n1.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n1.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n2.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n2.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -283,7 +283,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n3.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n3.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n4.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n4.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -319,7 +319,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n5.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n5.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -337,7 +337,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n6.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n6.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -355,7 +355,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n7.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n7.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="./images/products/n8.jpg" alt="product" class="product-img">
+                <img onclick="window.location.href='showProduct.html'" src="./images/products/n8.jpg" alt="product" class="product-img">
                 <div class="product-info">
                     <p>adidas</p>
                     <h5>Cartoon Astronaut T-Shirts</h5>
