--- a/index.html
+++ b/index.html
@@ -449,11 +449,31 @@
             <li><h3>Follow Us</h3></li>
             <li>
                 <ul class="social">
-                    <li><i class="fa-brands fa-facebook-f"></i></li>
-                    <li><i i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                    <li><i class="fa-brands fa-pinterest"></i></li>
-                    <li><i class="fa-brands fa-youtube"></i></li>
+                    <li>
+                        <a href="https://www.facebook.com">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.pinterest.com">
+                            <i class="fa-brands fa-pinterest"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
