shopping cart link added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="layout hide"></div>
             </nav>
             
-            <a class="shopping-cart" href="#">
+            <a class="shopping-cart" href="shoppingCart.html">
                 <div class="counter">0</div>
                 <i class="fa-solid fa-cart-shopping"></i>
             </a>
