--- a/payPage.html
+++ b/payPage.html
@@ -50,73 +50,11 @@
             </div>
         </div>
     </header>
+<section class="shopping-cart-header section-p1">
+    <h1>#pay</h1>
+    <p>Add your coupon code & SAVE up to 70%</p>
+</section>
 
-
-    <section class="shopping-cart-header section-p1">
-        <h1>#cart</h1>
-        <p>Add your coupon code & SAVE up to 70%</p>
-    </section>
-
-    <section class="shopping-cart-table section-m1">
-        <div class="shopping-table">
-            <table>
-                <thead>
-                    <tr>
-                        <th>REMOVE</th>
-                        <th>IMAGE</th>
-                        <th>PRODUCT</th>
-                        <th>PRICE</th>
-                        <th>QUANTITY</th>
-                        <th>SUBTOTAL</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="remove">&Cross;</td>
-                        <td class="product-img">
-                            <img src="./images/products/n1.jpg" alt="">
-                        </td>
-                        <td class="product-name">Cartoon Astrounaut T-shirt</td>
-                        <td class="price">$118.19</td>
-                        <td class="quantity">
-                            <input type="number" name="quantity" min="1" value="1">
-                        </td>
-                        <td class="subtotal">
-                            &118.19
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="remove">&Cross;</td>
-                        <td class="product-img">
-                            <img src="./images/products/n2.jpg" alt="">
-                        </td>
-                        <td class="product-name">Cartoon Astrounaut T-shirt</td>
-                        <td class="price">$118.19</td>
-                        <td class="quantity">
-                            <input type="number" name="quantity" min="1" value="1">
-                        </td>
-                        <td class="subtotal">
-                            &118.19
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="remove">&Cross;</td>
-                        <td class="product-img">
-                            <img src="./images/products/n3.jpg" alt="">
-                        </td>
-                        <td class="product-name">Cartoon Astrounaut T-shirt</td>
-                        <td class="price">$118.19</td>
-                        <td class="quantity">
-                            <input type="number" name="quantity" min="1" value="1">
-                        </td>
-                        <td class="subtotal">
-                            &118.19
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </section>
     <section class="payment-section section-p1">
         <div class="payment-coupon">
             <h3>Apply Coupon</h3>
@@ -139,14 +77,78 @@
                     <td class="Total">$65</td>
                 </tr>
             </table>
-                <button class="checkout">
-                    <a href="./payPage.html">checkout</a>
-                    
-                </button>
+            <input type="submit" value="checkout" class="checkout">
 
         </div>
     </section>
-    
+    <form class="pay section-m1">
+        <div class="pay-container">
+            <div class="billing">
+                <h2>Billing Address</h2>
+                <div class="name">
+                    <h3>Full Name:</h3>
+                    <input type="text" class="required full-name" placeholder="Ahmed Mohamed">
+                </div>
+                <div class="email">
+                    <h3>Email:</h3>
+                    <input type="email" class="required" id="email" placeholder="example@example.com">
+                </div>
+                <div class="address">
+                    <h3>Address</h3>
+                    <input type="text" class="required address" value="">
+                </div>
+            </div>
+            <div class="pay-meth">
+                <h2>Payment</h2>
+                <div class="accepted-cards">
+                    <h3>Accepted Cards:</h3>
+                    <div class="method">
+                        <p class="select-meth">Select Method</p>
+                        <a class="paypal " target="_blank" href="https://www.paypal.com">
+                            <img src="./images/pay/paypal.png" alt="">
+                        </a>
+                        <a class="credit clicked" href="#">
+                            <img src="./images/pay/credit.png" alt="">
+                        </a>
+                        <div class="credit-info">
+                            <div class="credit-front">
+                                <div class="credit-name">
+                                    <h3>Name on Card</h3>
+                                    <input type="text" class="required credit-name-input" placeholder="Ahmed mohamed">
+                                </div>
+                                <div class="credit-no">
+                                    <h3>Credit card number</h3>
+                                    <input type="number" class="required credit-no-input"
+                                        placeholder="1111-2222-3333-4444">
+                                </div>
+                            </div>
+                            <div class="credit-exp-num">
+                                <div class="credit-exp-num-month">
+                                    <h3>Month:</h3>
+                                    <select name="exp month" id="exp-month" class="required exp-month">
+                                        <option value="month" Selected disabled>Month</option>
+                                    </select>
+                                </div>
+                                <div class="credit-exp-num-year">
+                                    <h3>Year:</h3>
+                                    <select name="exp year" id="exp-year" class="required exp-year">
+                                        <option value="Year" Selected disabled>Year</option>
+                                    </select>
+                                </div>
+                                <div class="cvv num">
+                                    <h3>Cvv:</h3>
+                                    <input type="number" class="required cvv" placeholder="542">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <input type="submit" value="Proceed To Checkout" class="pay-btn checkout">
+        <p class="valid">Please complete your info</p>
+    </form>
+
     <section class="newsletter section-p1">
         <div class="newsletter-head">
             <h2>Sign Up For Newsletters</h2>
