--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -139,11 +139,11 @@
                     <td class="Total">$65</td>
                 </tr>
             </table>
+            <a href="./payPage.html">
                 <button class="checkout">
-                    <a href="./payPage.html">checkout</a>
-                    
+                    checkout
                 </button>
-
+            </a>
         </div>
     </section>
     
